# local-llm

./: README.md  pyproject.toml
.chainlit/: config.toml
app/: app.py  test.py
