[project]
name = "local-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.8.1",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.8",
    "langgraph>=0.6.7",
    "ollama>=0.6.0",
]

[tool.uv.workspace]
members = [
    "venv",
]
